feat(all) Add help command, add default env

--- a/env.example
+++ b/env.example
@@ -12,3 +12,11 @@ LAMIGRATE_DRIVER=postgres
 # Путь к директории с миграциями.
 # Path to migrations directory.
 LAMIGRATE_MIGRATIONS_DIR=./migrations
+
+# Настройки Postgres (используются если LAMIGRATE_DSN не задан).
+# Postgres settings (used when LAMIGRATE_DSN is not set).
+POSTGRES_HOST=localhost
+POSTGRES_PORT=5432
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=postgres
+POSTGRES_DB=postgres
